Fix header img covering nav overlay and cart overlay issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,6 +259,7 @@ NAVIGATION
   position: absolute;
   top: 70px;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: rgba(5, 5, 5, 0.7);
@@ -308,6 +309,7 @@ CART OVERLAY
   position: absolute;
   top: 70px;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   padding: 22px 22px 0;
